Lagt til og kjørt ktlint (#102)